force-app/main/default/objects/Ticket_Assignment__c/Ticket_Assignment__c.object-meta.xml
<CustomObject>
    <label>Ticket Assignment</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Ticket Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>