force-app/main/default/objects/Ticket_Assignment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ticket Assignment</relationshipLabel>
    <relationshipName>Ticket_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>