force-app/main/default/objects/Ticket_Assignment__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Support</description>
    <inlineHelpText>Salesforce Support</inlineHelpText>
    <label>Ticket</label>
    <referenceTo>Salesforce_Support__c</referenceTo>
    <relationshipLabel>Ticket Assignment</relationshipLabel>
    <relationshipName>Ticket_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>