force-app/main/default/objects/Ticket_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ticket__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Contact__c</columns>
    <columns>Assigned_By__c</columns>
    <columns>Assignment_Date__c</columns>
    <columns>Remarks__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>